[project]
name = "yonex"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Ryosuke Yoneda", email = "13e.e.c.13@gmail.com" } 
]
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.20.3",
    "numpy>=2.1.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
